Implementación de pruebas de de cobertura con jacoco and sonar